# vocseq

./: .gitignore  .nf-core.yml  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml  setup_nxf.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
assets/: schema_input.json
conf/: base.config  test.config  test_full.config
docs/: README.md  output.md  usage.md
subworkflows/local/utils_nfcore_vocseq_pipeline/: main.nf
workflows/: vocseq.nf
