[project]
name = "vocseq"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mshunjan", email = "manjothunjan@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "nf-core>=3.0.2",
    "commitizen>=4.1.0",
]

[tool.rye.scripts]
nextflow = "./setup_nxf.sh"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vocseq"]
